Correctly align 'no data' in grid tables

--- a/powa/static/scss/powa_backgrid.scss
+++ b/powa/static/scss/powa_backgrid.scss
@@ -99,7 +99,7 @@
     font-style: italic;
     color: gray;
     td {
-      display: inherit;
+      display: table-cell;
       text-align: center;
     }
   }
